--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -3,6 +3,9 @@
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
+  background-color: grey;
+  height: 90vh;
+  width: 90vw;
 }
 
 .logo {
