--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -3,7 +3,7 @@
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
-  background-color: grey;
+  background-color: white;
   height: 90vh;
   width: 90vw;
 }
@@ -41,5 +41,5 @@
 }
 
 .read-the-docs {
-  color: #888;
+  color: white;
 }
